Fix button not extended on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,14 @@
     --orange:  #FF6F1D;
 }
 
+.start-btn img {
+    --margin-left-play-btn-img: -4px;
+}
+
+.start-btn {
+    --start-btn-max-width: 155px;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -63,25 +71,27 @@ body {
         box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 20px 20px rgba(0,0,0,0.23);
     }
 
-    .workout:hover button {
-        width: 140px;
+    .workout:hover .start-btn {
+        width: var(--start-btn-max-width);
     }
 
-    .workout:hover button p {
+    .workout:hover .start-btn p {
         max-width: 7rem;
     }
 
-    .workout:hover button img {
+    .workout:hover .start-btn img {
         transform: rotate(-240deg);
+        margin-left: var(--margin-left-play-btn-img);
     }
 
-    button:hover {
+    .start-btn:hover {
         background-color: var(--blue);
         color: white;
         border: none;
+        cursor: pointer;
     }
 
-    button:hover img {
+    .start-btn:hover img {
         filter: none;
     }
 }
@@ -224,7 +234,7 @@ svg {
     justify-content: space-evenly;
 }
 
-button {
+.start-btn {
     height: 40px;
     position: absolute;
     right: 25px;
@@ -238,19 +248,19 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px 10px 16px 10px;
 }
 
-button:active {
+.start-btn:active {
     background-color: #5572a8;
+    border: none;
 }
 
-button img {
+.start-btn img {
     filter: invert();
     transition: 0.5s;
 }
 
-button p {
+.start-btn p {
     max-width: 0;
     transition: max-width 0.5s;
     display: inline-block;
@@ -260,16 +270,19 @@ button p {
 }
 
 @media (hover: none) {
-    button p {
+    .start-btn p {
         max-width: 7rem;
     }
 
-    button {
+    .start-btn {
         background-color: #00194B;
         color: white;
+        border: none;
+        width: var(--start-btn-max-width);
     }
 
-    button img {
+    .start-btn img {
+        margin-left: var(--margin-left-play-btn-img);
         filter: none;
     }
 }
